figured out how to create db config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -66,3 +66,13 @@ silhouette {
 		}
 	}
 }
+
+database = {
+	driver = org.postgresql.Driver
+	url = "jdbc:postgresql://localhost:5432/note_db"
+	user = "note_vv"
+	password = "note_vv"
+	numThreads = 10
+	connectionTimeout = 5000
+	validationTimeout = 5000
+}
