--- a/conf/application.conf
+++ b/conf/application.conf
@@ -76,3 +76,13 @@ database = {
 	connectionTimeout = 5000
 	validationTimeout = 5000
 }
+
+application {
+	name = "wellavisage"
+	service = 1
+	page {
+		start = 100
+		capacity = 10
+		preview = "/img/logo.png"
+	}
+}
