correct implementation of page service

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -81,7 +81,7 @@ application {
 	name = "wellavisage"
 	service = 1
 	page {
-		start = 100
+		limit = 100
 		capacity = 10
 		preview = "/img/logo.png"
 	}
